# Digital_Twin

./: .gitignore  CLustering.ipynb  Descrete Event Simulation.csv  Framework.csv  MQTT_subscribe.py  Pipfile  README.md  Second_readme.md  State of Art .csv  data_vectorized.csv  data_vectorized_simpler.csv  influx_tests.py  motor_tests.py  mqtt_publish.py  output.csv  output1.csv  output2.csv  pedro_alex.py  real_simple.py  requirements.txt  sensor_tests.py  simulation_Q-St.py  station_control.py  stop.py  test.py
5s_model/: dry_run.py  test.py  (+9 more)
Parallel_test/test_simpy/simpy-master/: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGES.rst  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
Parallel_test/test_simpy/simpy-master/docs/: conf.py  conftest.py  contents.rst  index.rst
Parallel_test/test_simpy/simpy-master/docs/about/: acknowledgements.rst  history.rst  release_process.rst
Parallel_test/test_simpy/simpy-master/docs/api_reference/: simpy.core.rst  simpy.resources.rst  simpy.rt.rst
Parallel_test/test_simpy/simpy-master/docs/examples/: bank_renege.rst  index.rst  movie_renege.rst
Parallel_test/test_simpy/simpy-master/docs/examples/code/: README.txt  movie_renege.py
Parallel_test/test_simpy/simpy-master/docs/simpy_intro/: installation.rst
Parallel_test/test_simpy/simpy-master/docs/topical_guides/: environments.rst  events.rst  index.rst  porting_from_simpy2.rst  porting_from_simpy3.rst  process_interaction.rst  resources.rst  simpy_basics.rst
Parallel_test/test_simpy/simpy-master/src/simpy/: __init__.py  core.py  events.py  exceptions.py  rt.py
Parallel_test/test_simpy/simpy-master/tests/: test_condition.py  test_event.py  test_exceptions.py  test_interrupts.py  test_process.py  test_resources.py  test_rt.py  test_timeout.py  test_util.py
(+9216 files in other folders)
