[metadata]
name = simpy
author = Ontje Lünsdorf, Stefan Scherfke
author_email = the_com@gmx.de, stefan@sofa-rockers.org
description = Event discrete, process based simulation for Python.
long_description = file: README.rst, CHANGES.rst, AUTHORS.rst
long_description_content_type = text/x-rst
url = https://simpy.readthedocs.io
license = MIT License
license_file = LICENSE.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering

[options]
include_package_data = True
zip_safe = False
setup_requires =
    setuptools_scm
install_requires =
python_requires = >= 3.6
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[flake8]
ignore =
max-line-length = 79
exclude = .*/, build, __pycache__, *.egg

[tool:pytest]
addopts = --doctest-glob="*.rst" -m "not benchmark"

[coverage:run]
branch = True
include = src/simpy/*,docs/*,tests/*

[bdist_wheel]
universal = 1

[mypy]
pretty = True
show_error_codes = True
files = src/simpy
